--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@prisma/client": "^6.8.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/helmet": "^4.0.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -36,6 +38,8 @@
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.25.20"
   },
   "devDependencies": {
